# dataprocess_project

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  USER_MANUAL.md  dataprocess.py  pyproject.toml
.github/workflows/: python-package.yml
dataprocessor/: __init__.py  cli.py  interactive.py  io_utils.py  pipeline.py  session.py  utils.py
dataprocessor/operations/: __init__.py  core.py  joins.py  stats.py
examples/: pipeline_example.json
tests/: test_dataprocessor.py
